Translations updates - ca es ja
(Old svn revision: 29184)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-01-11  Maximilian Schleiss <maximilian@xfce.org>
+
+	* ca.po: Catalan translation update (Carles Muñoz Gorriz)
+	* es.po: Spanish translation update (Abel Martín)
+
 2009-01-11	Jannis Pohlmann <jannis@xfce.org>
 
 	* xfce4-panel.pot, *.po: Update translation files to make sure 
@@ -5,7 +10,7 @@
 
 2009-01-06  Piarres Beobide <pi@beobide.net>
 
-        * eu.po: Basque translation update
+	* eu.po: Basque translation update
 
 2009-01-03  Michal Várady <miko.vaji@gmail.com>
 
