Some trunk basque translations updates
(Old svn revision: 29254)

--- a/po/eu.po
+++ b/po/eu.po
@@ -110,36 +110,31 @@ msgstr "Garatzailea"
 
 #: ../panel/main.c:60
 msgid "Print version information and exit"
-msgstr ""
+msgstr "Inprimatu bertsio argibideak eta irten"
 
 #: ../panel/main.c:61
-#, fuzzy
 msgid "Show 'Customize Panel' dialog"
-msgstr "Pertsonalizatu panela..."
+msgstr "Ikusi 'Pertsonalizatu panela' leihoa"
 
 #: ../panel/main.c:62
-#, fuzzy
 msgid "Save the panel configuration"
-msgstr "Konfigurazioa gorde"
+msgstr "Gorde panel konfigurazioa"
 
 #: ../panel/main.c:63
-#, fuzzy
 msgid "Restart the running instance of xfce4-panel"
-msgstr "xfce4-panel berrabiarazten..."
+msgstr "Berrabiarazi abiarazitako xfce4-panel instantzia"
 
 #: ../panel/main.c:64
-#, fuzzy
 msgid "Log out the active session"
-msgstr "Pantaila blokeatu edo saioa itxi"
+msgstr "Itxi aktibo dagoen saioa"
 
 #: ../panel/main.c:65
 msgid "Close all panels and end the program"
 msgstr "Panel guztiak itxi eta programa amaitu"
 
 #: ../panel/main.c:66
-#, fuzzy
 msgid "Show 'Add New Items' dialog"
-msgstr "Gehitu elementu berriak"
+msgstr "Ikusi 'Gehitu elementu berriak' leihoa"
 
 #. TRANSLATORS: Errors when gtk_init failed, probably the command
 #. executed without xserver running
@@ -158,9 +153,8 @@ msgid "Please report bugs to <%s>."
 msgstr "Mesedez programa erroreen berri <%s>-n eman"
 
 #: ../panel/main.c:151
-#, fuzzy
 msgid "Xfce4-panel already running"
-msgstr "xfce4-panel dagoeneko martxan dago"
+msgstr "Xfce4-panel dagoeneko martxan dago"
 
 #: ../panel/main.c:162
 msgid "Restarting xfce4-panel..."
@@ -409,7 +403,7 @@ msgstr "Bakarrik _txikituriko aplikazioak bistarazi"
 
 #: ../plugins/iconbox/iconbox.c:938
 msgid "Show applications of _all workspaces"
-msgstr "Bistarazi idazmahai birtual _guztietako aplikazioak"
+msgstr "Bistarazi idazmahai _guztietako aplikazioak"
 
 #: ../plugins/iconbox/iconbox.c:946 ../plugins/tasklist/tasklist-dialogs.c:186
 msgid "Use all available _space"
@@ -575,7 +569,7 @@ msgstr "Ezkutatuko leihoa berrezarri"
 
 #: ../plugins/showdesktop/showdesktop.c:34
 msgid "Hide windows and show desktop"
-msgstr "Leihoan ezkutatu eta idazmahaia bistarazi"
+msgstr "Leihoan ezkutatu eta mahaigaina bistarazi"
 
 #: ../plugins/systray/xfce-tray-plugin.c:70
 #: ../plugins/systray/xfce-tray-dialogs.c:333
@@ -635,7 +629,7 @@ msgstr "Ikusi _kudeatzailea"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:211
 msgid "Show tasks from _all workspaces"
-msgstr "Ikusi idazmahai birtual guztien l_anak"
+msgstr "Ikusi idazmahai guztien l_anak"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:220
 msgid "Never group tasks"
@@ -663,7 +657,7 @@ msgstr "Ziur al zaude '%s' idazmahaia ezabatu nahi duzula?"
 #: ../plugins/windowlist/windowlist.c:476
 #, c-format
 msgid "Workspace %d"
-msgstr "%d Idazmahaia"
+msgstr "%d idazmahaia"
 
 #: ../plugins/windowlist/windowlist.c:591
 #: ../plugins/windowlist/windowlist.c:597
@@ -756,13 +750,12 @@ msgid "Adds a space or a line between panel items"
 msgstr "Panel elementuen artean lekua edo lerro bat gehitu"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
-#, fuzzy
 msgid "Hide all windows and show the desktop"
-msgstr "Leihoan ezkutatu eta idazmahaia bistarazi"
+msgstr "Ezkutatu leiho guztiak eta mahaigaina bistarazi"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:2
 msgid "Show Desktop"
-msgstr "Ikusi idazmahaia"
+msgstr "Ikusi mahaigaina"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
 msgid "Area where notification icons appear"
@@ -770,11 +763,11 @@ msgstr "berrie-mate ikonoak egertzen diren eremua"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
 msgid "Switch between open windows using buttons"
-msgstr ""
+msgstr "Aldatu irekitako leihoen artean botoiak erabiliaz"
 
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:1
 msgid "Switch between open windows using a menu"
-msgstr ""
+msgstr "Aldatu irekitako leihoen artean menua erabiliaz"
 
 #: ../settings/xfce4-panel-manager.desktop.in.h:3
 msgid "Panel Manager"
