xfce4-session/trunk/po: 	* sv.po: Swedish translation update (Daniel Nylander) xfce4-panel/trunk/po: 	* sv.po: Swedish translation update (Daniel Nylander) xfce4-settings/trunk/po: 	* sv.po: Swedish translation update (Daniel Nylander) libxfce4menu/trunk/po: 	* sv.po: Swedish translation update (Daniel Nylander) libxfce4util/trunk/po: 	* sv.po: Swedish translation update (Daniel Nylander) xfwm4/trunk/po: 	* sv.po: Swedish translation update (Daniel Nylander) xfce4-appfinder/trunk/po: 	* sv.po: Swedish translation update (Daniel Nylander) xfconf/trunk/po: 	* sv.po: Swedish translation update (Daniel Nylander) libxfcegui4/trunk/po: 	* sv.po: Swedish translation update (Daniel Nylander)
(Old svn revision: 29271)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-18  Alexander Toresson <eulex@xfce.org>
+
+	* sv.po: Swedish translation update (Daniel Nylander)
+
 2009-01-15 Piarres Beobide <pi@beobide.net>
 
         * eu.po: Basque translation update
