Translations updates - es et fr ja zh_CN
(Old svn revision: 29272)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2009-01-18  Maximilian Schleiss <maximilian@xfce.org>
+
+	* es.po: Spanish translation update (Abel Martín)
+	* et.po: Estonian translation update (Kristjan Siimson)
+	* fr.po: French translation update (Jérôme Guelfucci)
+
 2009-01-18  Alexander Toresson <eulex@xfce.org>
 
 	* sv.po: Swedish translation update (Daniel Nylander)
